# combinatorix

./: .gitignore  CMakeLists.txt  Readme.md  combination_components.h  combine.cpp  main.cpp  split.h
cmake/: MyFunctions.cmake
communication/: CMakeLists.txt
communication/include/: comm_export.h  local_communicator.h  local_sync.h  local_sync_p.h
communication/src/: local_channel_container.cpp  local_communicator.cpp  local_sync_p.cpp
communication/tests/: send_recv.test.cpp  send_recv_2.test.cpp  send_recv_3.test.cpp
engine/: CMakeLists.txt  main.cpp
engine/include/: action.h  engine.h  engine_builder.h  engine_export.h  engine_p.h  game_communicator.h  game_logic.h  game_schedule.h  geometry_components.h  move_request_history.h  simulation_data.h  simulation_executable.h  snapshot_utils.h  status_structs.h  thread_pool.h
engine/src/: action.cpp  engine.cpp  game_communicator.cpp  game_logic.cpp  simulation_data.cpp  simulation_executable.cpp  snapshot_utils.cpp  thread_pool.cpp
engine/tests/: geometric_move.test.cpp  local_comm.test.cpp  status.test.cpp  status_2.test.cpp  status_3.test.cpp  status_4.test.cpp
engine_client/: CMakeLists.txt
engine_client/include/: engine_client.h  engine_client_p.h
geometry/: CMakeLists.txt
geometry/include/: Vec2D.h  aabb.h  collision_processor.h  collision_tree.h  geometry_export.h  move_request.h  position.h  shape.h  velocity.h
geometry/src/: aabb.cpp  collision_processor.cpp  collision_tree.cpp  move_request.cpp  shape.cpp
geometry/tests/: broad_phase.test.cpp
graphics/: CMakeLists.txt  example.cpp  example_3d_tex.cpp
graphics/shaders/: cosdwarp2d.fs  light_edges.fs  perlin.fs  perlin3d.fs  tex3d.vs
include/: combination_components.h  combine.h  effect.h  status.h  types.h
logistics/: CMakeLists.txt
logistics/include/: attributes_info.h  change_merger.h  changes_builder.h  combine.h  effect.h  entt_utils.h  floyd.h  game_logic.h  graph.h  history_manager.h  history_storage.h  history_utils.h  local_change_tracker.h  logistics_export.h  numeric_value.h  priority.h  simulation_engine.h  simulation_executable.h  status.h  trigger.h  typelist.h
logistics/src/: attributes_info.cpp  change_merger.cpp  combine.cpp  effect.cpp  history_manager.cpp  history_utils.cpp  local_change_tracker.cpp  numeric_value.cpp  priority.cpp  simulation_engine.cpp  simulation_executable.cpp  split.cpp  status.cpp
logistics/tests/: PACO.test.cpp  algos.test.cpp  changes.test.cpp  graph.test.cpp  status.test.cpp  status_2.test.cpp  status_loop_1.test.cpp  storage_sanity.test.cpp
src/: combine.cpp  effect.cpp  main.cpp  status.cpp  types.cpp
tests/: combine.test.cpp  storage_sanity.test.cpp
thread_pool/: CMakeLists.txt
thread_pool/include/: thread_pool.h  thread_pool_export.h
